# Telegram-AI-Lead-Agent

./: .gitignore  README.md  Requirements.txt  config.py  main.py  pyproject.toml
ai_engine/: __init__.py  gemini.py  groq.py
ai_engine/tools/: __init__.py  calendar.py  gmail.py  schemas.py
dashboard/: app.py
database/: db.py
handlers/: message_handler.py  onboarding_handler.py
