[project]
name = "telegram-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "google-genai>=2.6.0",
    "groq>=1.4.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "streamlit>=1.58.0",
    "supabase>=2.30.1",
]
